# CLION_Taller1_FelipeRojo

./: CMakeLists.txt  DiagramaDeClases.puml  Estadisticas.cpp  Estadisticas.h  Ficha.cpp  Ficha.h  ISistemaJuego.h  MatrizPocoPoblada.cpp  MatrizPocoPoblada.h  NodoFicha.h  SistemaJuego.cpp  SistemaJuego.h  Tablero.cpp  Tablero.h  TurnoEnemigo.cpp  TurnoEnemigo.h  main.cpp
Model/: Estadisticas.cpp  Estadisticas.h  Ficha.cpp  Ficha.h  MatrizPocoPoblada.cpp  MatrizPocoPoblada.h  NodoFicha.cpp  NodoFicha.h  Tablero.cpp  Tablero.h  TurnoEnemigo.cpp  TurnoEnemigo.h  TurnoJugador.cpp  TurnoJugador.h
Services/: ISistemaJuego.cpp  ISistemaJuego.h
Util/: LeerArchivo
